welcome.lessons.welcome.loopdowhile.Poucet.scala.error
Poucet:2: error: Missing closing brace `}' assumed here
var biscuit:Int=0
^Poucet:9: error: ')' expected but '<-' found.
if (biscuit <- 2){droite()}{else{gauche()} 
            ^Poucet:12: error: illegal start of simple expression
}
^